<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_order_request"
        android:icon="@drawable/ic_order_request"
        android:title="@string/title_order_request" />

    <item
        android:id="@+id/navigation_order_shcedule"
        android:icon="@drawable/ic_order_schedule"
        android:title="@string/title_order_schedule" />

    <item
        android:id="@+id/navigation_transfer_request"
        android:icon="@drawable/ic_transfer_request"
        android:title="@string/title_transfer_request" />
    <item
        android:id="@+id/navigation_transfer_schedule"
        android:icon="@drawable/ic_transfer_schedule"
        android:title="@string/title_transfer_schedule" />

</menu>
