<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="josim74.git.com.hrfeeddepo.TransferDetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:background="@color/colorBlueGray"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:padding="8dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/dealer_name"/>
                    <TextView
                        android:id="@+id/tv_dealerNname_transferDetails"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/korim_enterprize_ltd"/>
                </LinearLayout>
                <LinearLayout
                    android:padding="8dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textSize="18sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/address"/>
                    <TextView
                        android:id="@+id/tv_dealerAddress_transferDetails"
                        android:textSize="18sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gazipur"/>
                </LinearLayout>
                <LinearLayout
                    android:padding="8dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textSize="18sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product_name"/>
                    <TextView
                        android:id="@+id/tv_productName_transferDetails"
                        android:textSize="18sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="PBC"/>
                </LinearLayout>
                <LinearLayout
                    android:padding="8dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textSize="18sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quantity"/>
                    <TextView
                        android:id="@+id/tv_quantity_transferDetails"
                        android:textSize="18sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="500KG "/>
                </LinearLayout>
                <LinearLayout
                    android:padding="8dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textSize="18sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/avialable"/>
                    <TextView
                        android:id="@+id/tv_avialable_transferDetails"
                        android:background="@color/colorGreen"
                        android:textSize="18sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1500KG "/>
                </LinearLayout>
                <LinearLayout
                    android:padding="8dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textSize="18sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product_rate"/>
                    <TextView
                        android:id="@+id/tv_productRate_transferDetails"
                        android:textSize="18sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="25tk "/>
                </LinearLayout>
                <LinearLayout
                    android:padding="8dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textSize="18sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Total Price: "/>
                    <TextView
                        android:id="@+id/tv_totalPrice_transferDetails"
                        android:textSize="18sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="12500tk "/>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:padding="8dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/driver_name"/>

                <EditText
                    android:id="@+id/et_driverName_transferDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Name Here"
                    android:inputType="text"
                    android:textSize="18sp" />
            </LinearLayout>
            <LinearLayout
                android:padding="8dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/car_number"/>

                <EditText
                    android:id="@+id/et_carNumber_transferDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Car Number Here"
                    android:inputType="text"
                    android:textSize="18sp" />
            </LinearLayout>
            <LinearLayout
                android:padding="8dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number"/>

                <EditText
                    android:id="@+id/et_phoneNumber_transferDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Phone Number Here"
                    android:inputType="phone"
                    android:textSize="18sp" />
            </LinearLayout>
            <LinearLayout
                android:padding="8dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btn_approve_transferDetails"
                    android:layout_marginRight="24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/approve"/>
                <Button
                    android:id="@+id/btn_pending_transferDetails"
                    android:layout_marginLeft="24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pending"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
