<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context="josim74.git.com.hrfeeddepo.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/logo_login"
                android:layout_width="192dp"
                android:layout_height="192dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:scaleType="fitCenter"
                android:background="@null"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/hr_logo" />
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="2"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:padding="16dp"
                android:layout_height="0dp">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/et_login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_number_here"
                        android:inputType="phone" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/et_login_pasword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/password_here" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:background="@color/colorPrimaryDark"
                    android:padding="16dp"
                    android:text="@string/login"
                    android:textSize="14sp"
                    android:textStyle="bold" />
                <LinearLayout
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:clickable="true"
                        android:focusable="true"
                        android:id="@+id/tv_forgot_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/forgot_password"
                        android:textColor="@android:color/holo_red_light"
                        android:textSize="12sp"
                        android:padding="5dp"
                        android:layout_marginTop="5dp"/>

                    <TextView
                        android:clickable="true"
                        android:focusable="true"
                        android:id="@+id/tv_register_here"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:text="Register"
                        android:layout_marginTop="5dp"
                        android:textColor="@android:color/holo_orange_dark"
                        android:textSize="18sp"
                        android:padding="5dp"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
